# logicProject

./: .gitignore  ExcludedMiddleCLI.txt  HowToGit.md  README.md  package-lock.json  package.json  test_input.json  tsconfig.json
.github/workflows/: eslint.yml
app/: layout.tsx  page.tsx  proof.ts  types.ts
app/components/: ProofEditor.tsx  StatementEditor.tsx  StepEditor.tsx
backend/: .gitignore  pyproject.toml
backend/scripts/: dev_setup.bat  dev_setup.ps1  dev_setup.sh
backend/src/proof_helper/: deserialize.py  formula.py  proof.py  rules.py  rules_builtin.py  rules_custom.py  server.py  symbols.py  verify.py
backend/src/proof_helper/app/: server.py
backend/src/proof_helper/core/: formula.py  proof.py  symbols.py
backend/src/proof_helper/io/: deserialize.py  parse_formula.py  parse_proof.py  rule_storage.py  serialize.py
backend/src/proof_helper/logic/: formula_similarity.py  rule_registry.py  rules_base.py  rules_builtin.py  rules_custom.py  step_suggestions.py  verify.py
backend/tests/: test_custom_rules.py  test_deserialize.py  test_elim_rules.py  test_formula_similarity.py  test_intro_rules.py  test_match_substitute.py  test_mock_API.py  test_parse_formula.py  test_parse_proof.py  test_rule_wrapper.py  test_rules.py  test_rules_hard.py  test_serialize.py  test_server_API.py  test_server_api.py  test_suggestions.py  test_symbols.py  test_verify.py
custom_rules/: ExcludedMiddle.json
frontend/: .gitignore  package-lock.json  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
scripts/: run.bat  run.ps1  run.sh
src/app/: layout.tsx  (+1 more)
(+76 files in other folders)
