[project]
name = "proof_helper"
version = "0.1.0"
description = "A command-line Fitch-style formal proof helper"
requires-python = ">=3.12.3"
dependencies = [
  "flask>=3.1.0"
]

[build-system]
requires = ["setuptools>=68.1.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
proof_helper = "proof_helper.cli:main"
proof_server = "proof_helper.server:main"